=======================================================================================================================
                                           Version 0.86u1->0.87
=======================================================================================================================
MainApp.properties
===================================
Added:
targetFileAlreadyExists=Target file %s already exists.\nDo you want to replace/overwrite it?
message.button.overwrite=Overwrite

renameAction.Action.text=&Rename file
renameAction.Action.shortDescription=Rename file
renameAction.Action.accelerator=F2

openLogFile.Action.text=&Open log file
openLogFile.Action.shortDescription=Open log for viewing
browseToLogFile.Action.text=&Browse to log file
browseToLogFile.Action.shortDescription=Open folder of log file


=======================================================================================================================
                                           Version 0.85u1->0.86
=======================================================================================================================
MainApp.properties
===================================
Added:
fileIsBeingAlreadyDownloading=File is already downloading

quietModeAction.Action.text=&Quiet Mode
quietModeAction.Action.shortDescription=Toggle Quiet Mode
quietModeAction.Action.accelerator=F8
quietModeAction.Action.smallIcon=${iconsPath}loudspeaker.png

quietModeActionTray=Quiet Mode

labelQuietMode.icon=${iconsPath}loudspeaker.png
labelQuietMode.toolTipText=Quiet Mode

userInteractionRequiredWav=user_interaction.wav


Changed:
monitorClipboardAction.Action.accelerator=F7


UserPreferencesDialog.properties
===================================
Added:
checkPreventStandbyWhileDownloading.text=Prevent standby while downloading (Windows only)

alertsPanelGeneral.tab.title=General
alertsPanelQM.tab.title=Quiet Mode

panelActivateQM.border=Quiet Mode activation