@@ -525,3 +525,4 @@ searchSubtitlesAction.Action.shortDescription=Search subtitles using opensubtitl
 searchSubtitlesAction.Action.smallIcon=${iconsPath}subtitles.png
 
 fileIsBeingAlreadyDownloading=File is already downloading
+DatabaseManager.databaseIsAlreadyUsed=Another instance of FRD is already running. Multiple instances are not supported.
