@@ -475,3 +475,6 @@ searchSubtitlesAction.Action.text=Vyhledat titulky
 searchSubtitlesAction.Action.shortDescription=Vyhledání titulků na opensubtitles.org
 searchSubtitlesAction.Action.smallIcon=${iconsPath}subtitles.png
 speedLimitImage=${iconsPath}speedlimit.png
+
+fileIsBeingAlreadyDownloading=Soubor je již stahován.
+DatabaseManager.databaseIsAlreadyUsed=Běží již jiná instance FRD. Současný běh více instancí FRD není podporován.
